<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".activity.users.LoginActivity"
android:background="@color/black">




    <ImageView
        android:id="@+id/imageViewLogin"
        android:layout_width="313dp"
        android:layout_height="183dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="50dp"
        android:layout_marginTop="122dp"
        android:layout_marginEnd="49dp"
        android:src="@drawable/car_white_decoration" />



    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/passwordLogin"
        style="@style/EditTextWithBorderBlack"
        android:layout_width="338dp"
        android:textColorHint="@color/red_custom"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="45dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="45dp"
        android:layout_marginBottom="291dp"
        android:drawableEnd="@drawable/baseline_password"
        android:hint="@string/Password"
        android:inputType="text"
        android:singleLine="true" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/emailLogin"
        android:handwritingBoundsOffsetRight="@dimen/cardview_compat_inset_shadow"
        style="@style/EditTextWithBorderBlack"
        android:layout_width="338dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="45dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="45dp"
        android:layout_marginBottom="363dp"
        android:drawableEnd="@drawable/baseline_email"
        android:hint="@string/email"
        android:textColorHint="@color/red_custom"
        android:inputType="text"
        android:singleLine="true" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/enterLoginBtn"
        android:layout_width="wrap_content"
        android:layout_height="59dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="45dp"
        android:layout_marginTop="480dp"
        android:layout_marginEnd="45dp"
        android:layout_marginBottom="-4dp"
        android:background="@drawable/button_red"
        android:backgroundTint="@color/red"
        android:end="@id/title"
        android:text="@string/enter"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textColorHint="@color/white" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnGoogleAuth"
        android:layout_width="wrap_content"
        android:layout_height="59dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="45dp"
        android:layout_marginTop="593dp"
        android:layout_marginEnd="45dp"
        android:layout_marginBottom="-4dp"
        android:background="@drawable/button_red"
        android:backgroundTint="@color/white"
        android:drawableLeft="@drawable/googleg_standard_color_18"
        android:end="@id/title"
        android:text="@string/enter_google"
        android:textAlignment="center"
        android:textColor="@color/medium_black"
        android:textColorHint="@color/white"
        android:textSize="19dp" />

    <TextView
        android:id="@+id/titleInitial"
        android:layout_width="52dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="185dp"
        android:layout_marginTop="554dp"
        android:layout_marginEnd="172dp"
        android:layout_marginBottom="142dp"
        android:text="@string/or"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="25dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textDecoration_"
        android:layout_width="353dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="25dp"
        android:layout_marginTop="548dp"
        android:layout_marginEnd="25dp"
        android:text="___________        __________"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="22dp"
        android:textStyle="bold" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/backButonLogin"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="7dp"
        android:layout_marginTop="4dp"
        android:background="?android:attr/selectableItemBackground"
        android:contentDescription="@string/back_button"
        android:drawableEnd="@drawable/baseline_arrow_back_25" />


    <TextView
        android:id="@+id/titleDecorationLogin"
        android:layout_width="384dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="12dp"
        android:layout_marginTop="61dp"
        android:layout_marginEnd="13dp"
        android:text="@string/title_decoreition_login"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="35dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txtDecorationLogin"
        android:layout_width="384dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="6dp"
        android:layout_marginTop="675dp"
        android:layout_marginEnd="6dp"
        android:text="@string/text_decoreition_login_two"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="19dp" />


</RelativeLayout>